<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>UI::SetupConversionDialog</class>
 <widget class="QDialog" name="UI::SetupConversionDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>480</width>
    <height>400</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Setup conversion</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <property name="margin">
    <number>2</number>
   </property>
   <item>
    <widget class="QToolBox" name="toolBox">
     <property name="currentIndex">
      <number>0</number>
     </property>
     <widget class="QWidget" name="formatPage">
      <attribute name="label">
       <string/>
      </attribute>
      <layout class="QVBoxLayout" name="formatSettingsLayout">
       <property name="margin">
        <number>0</number>
       </property>
      </layout>
     </widget>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QCheckBox" name="overwriteExisting">
       <property name="text">
        <string>Overwrite</string>
       </property>
       <property name="toolTip">
         <string>Force to overwrite existing files</string>
       </property>
       <property name="checked">
        <bool>false</bool>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QCheckBox" name="createDirectories">
       <property name="text">
        <string>Create path</string>
       </property>
       <property name="toolTip">
         <string>Force to create all intermediate directories of target files</string>
       </property>
       <property name="checked">
        <bool>false</bool>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QCheckBox" name="useMultithreading">
       <property name="text">
        <string>Use multithread conversion</string>
       </property>
       <property name="toolTip">
         <string>Save data in separate thread. Speedup for 20..100%</string>
       </property>
       <property name="checked">
        <bool>false</bool>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
